[build-system]
requires = [
    "setuptools>=61.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "simple_frame"
version = "0.0.1"
description = "Simpler version of dataframes"
readme = "README.rst"
authors = [
    { name = "Johannes", email = "johannes-horler@posteo.org" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = []
requires-python = ">=3.11"

[project.license]
file = "LICENSE.txt"

[project.urls]
Source = "https://github.com/johannes-programming/simple_frame"
Download = "https://pypi.org/project/simple-frame/#files"
